--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "twilio": "^4.11.0"
+    "twilio": "^4.11.0",
+    "whatwg-url": "^14.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
