--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,16 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "react-icons": "^4.11.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
-    "recharts": "^2.8.0",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1"
+    "react-router-dom": "^6.30.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -31,4 +31,4 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
   }
-} 
+}
