Complete Trinity Management System - Realistic user roles, role-based access, auto-generated passwords, and all management modules

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,25 +1,44 @@
+# Trinity Management System Backend Environment Configuration
+
 # Server Configuration
-PORT=5001
+PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/trinity_management_db
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/trinity_management_system
+MONGODB_URI_PROD=mongodb+srv://username:password@cluster.mongodb.net/trinity_management_system
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRE=7d
+JWT_SECRET=your_jwt_secret_key_here_make_it_long_and_secure
+JWT_EXPIRE=30d
 
 # Email Configuration (for notifications)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password
-
-# SMS Configuration (Twilio)
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=your_twilio_phone_number
+EMAIL_FROM=Trinity Management System <noreply@trinity.com>
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
-UPLOAD_PATH=./uploads 
+UPLOAD_PATH=./uploads
+
+# Security Configuration
+BCRYPT_ROUNDS=12
+RATE_LIMIT_WINDOW=15
+RATE_LIMIT_MAX=100
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN_PROD=https://your-frontend-domain.com
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FILE=./logs/app.log
+
+# API Configuration
+API_VERSION=v1
+API_PREFIX=/api
+
+# Render.com Configuration (for production)
+RENDER_EXTERNAL_URL=https://your-app-name.onrender.com 
