--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -9,28 +9,27 @@ services:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 5001
-      - key: MONGODB_URI
+        value: 10000
+      - key: MONGODB_URI_PROD
         sync: false
       - key: JWT_SECRET
         sync: false
       - key: JWT_EXPIRE
-        value: 7d
-      - key: EMAIL_HOST
-        value: smtp.gmail.com
-      - key: EMAIL_PORT
-        value: 587
-      - key: EMAIL_USER
-        sync: false
-      - key: EMAIL_PASS
-        sync: false
-      - key: TWILIO_ACCOUNT_SID
-        sync: false
-      - key: TWILIO_AUTH_TOKEN
-        sync: false
-      - key: TWILIO_PHONE_NUMBER
-        sync: false
+        value: 30d
+      - key: CORS_ORIGIN_PROD
+        value: https://your-frontend-domain.com
+      - key: API_PREFIX
+        value: /api
+      - key: BCRYPT_ROUNDS
+        value: 12
+      - key: RATE_LIMIT_WINDOW
+        value: 15
+      - key: RATE_LIMIT_MAX
+        value: 100
       - key: MAX_FILE_SIZE
         value: 5242880
-      - key: UPLOAD_PATH
-        value: ./uploads 
+      - key: LOG_LEVEL
+        value: info
+    healthCheckPath: /health
+    autoDeploy: true
+    branch: main 
